# haskell-rust-ffi-template

./: .envrc  .gitignore  .mergify.yml  README.md  flake.nix  justfile
.github/workflows/: ci.yml  update-flake-lock.yaml
haskell/: default.nix  hello-haskell.cabal
haskell/src/: Main.hs
nix/: om.nix
rust/: Cargo.toml  default.nix  gpgenc.txt
rust/src/: lib.rs
