cabal-version: 3.0
name:          hello-haskell
version:       0.1.0.0
license:       MIT
author:        shivaraj-bh
build-type:    Simple

executable hello-haskell
  main-is:          Main.hs
  ghc-options:      -Wall
  extra-libraries:  hello_rust
  extra-lib-dirs:   ../rust/target/debug
  build-depends:    base,
                    bytestring,
                    text,
                    base64-bytestring
  hs-source-dirs:   src
  default-language: Haskell2010
