[package]
authors = ["shivaraj-bh"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "hello_rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

# ------------------------------------------------------------
# Dependencies for main library / binary
# ------------------------------------------------------------
[dependencies]
sequoia-openpgp = "1.17"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
base64 = "0.22.1"
# libc = "0.2"

# ------------------------------------------------------------
# Development / test dependencies
# ------------------------------------------------------------
[dev-dependencies]
tempfile = "3.6"
